create first prototype

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,9 @@
 ---
 # should we do a version check? (recomended)
 submodules_versioncheck: false
+journald_server__splitmode: 'host'
+journald_server__systemd_jobs:
+  - name: 'Collect systemd journal logs'
+    command: "/lib/systemd/systemd-journal-remote --listen-https=19532 --output=/var/log/journal/remote/"
+    port: '19532'
+    systemd_file: 'systemd-journal-remote.service'
