--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -8,3 +8,22 @@
     owner: 'root'
     group: 'root'
     mode: '0644'
+  notify: 'systemctl restart remotesyslogserver'
+
+- name: Create systemd service for rsyslog server
+  become: true
+  ansible.builtin.template:
+    src: 'templates/systemd-journal-remote.service.j2'
+    backup: true
+    dest: "/lib/systemd/system/{{ item.systemd_file }}"
+    owner: 'root'
+    group: 'root'
+    mode: '0644'
+  with_items: "{{ journald_server__systemd_jobs }}"
+  notify: 'systemctl restart remotesyslogserver'
+
+- name: Reload systemd daemon
+  become: true
+  ansible.builtin.systemd_service:
+    daemon_reload: true
+  notify: 'systemctl restart remotesyslogserver'
